@@ -3,10 +3,12 @@ FORMS = vcarddialog.ui \
 
 HEADERS = vcardplugin.h \
           vcard.h \
+          prixmapframe.h \
           vcarddialog.h \
           edititemdialog.h
 
 SOURCES = vcardplugin.cpp \
           vcard.cpp \
+          prixmapframe.cpp \
           vcarddialog.cpp \
           edititemdialog.cpp
